--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
     <header>
         <h1>NITHISHKUMAR</h1>
         <h2 id="firsh1">project Manager</h2>
-        <nav>PHONE<a href="tel:91 9345335073" target="-blank">9345335073</a>
-            linkedin<a href="linkedin.com" target="-blank">linkedin</a><br>
-            EMAIL<a href="mailto:balaprem678@gmail.com" target="-blank">nithishraina5@gmail.com</a>
+        <nav>
+            <span class="v1">PHONE<a href="tel:91 9345335073" target="-blank">9345335073</a></span><span class="v2">
+                linkedin<a href="linkedin.com" target="-blank">linkedin</a><br>
+                <span class="v3"> EMAIL<a href="mailto:balaprem678@gmail.com"
+                        target="-blank">nithishraina5@gmail.com</a></span>/
 
-            twiter<a href="https://twitter.com/NITHISH632000" target="-blank">twitter</a>
+                <span class="v4"> twiter<a href="https://twitter.com/NITHISH632000" target="-blank">twitter</a></span>
         </nav>
     </header>
-    <p>Lorem ipsum, dolor sit amet connisectetur adipisicing elit. Placeat officia quasi ab quia eos animi aliquid
+    <p class="p1">Lorem ipsum, dolor sit amet connisectetur adipisicing elit. Placeat officia quasi ab quia eos animi aliquid
         eveniet
         veritatis consequuntur tenetur. Omnis, beatae natus? Ipsum, enim quisquam similique consequatur quia facere?
     </p>
