--- a/index.html
+++ b/index.html
@@ -10,89 +10,140 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/icofont.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="">
     <title>Document</title>
 </head>
 
 <body>
-    <header>
-        <h1>NITHISHKUMAR</h1>
-        <h2 id="firsh1">project Manager</h2>
-        <nav>
-            <span class="v1">PHONE<a href="tel:91 9345335073" target="-blank">9345335073</a></span><span class="v2">
-                linkedin<a href="linkedin.com" target="-blank">linkedin</a><br>
-                <span class="v3"> EMAIL<a href="mailto:balaprem678@gmail.com"
-                        target="-blank">nithishraina5@gmail.com</a></span>/
+    <div class="fullbody">
+        <div class="heading">
+            <header>
+                <div class="name">
+                    <h1>NITHISHKUMAR</h1>
+                    <h2>project Manager</h2>
+                </div>
+                <div class="navication">
+                    <div class="ph">
+                        PHONE <a href="tel:91 9345335073" target="-blank">9345335073</a></span>
+                    </div>
+                    <div class="linkedin">
+                        linkedin <a href="linkedin.com" target="-blank">linkedin </a><br>
+                    </div>
+                    <div class="mail">
 
-                <span class="v4"> twiter<a href="https://twitter.com/NITHISH632000" target="-blank">twitter</a></span>
-        </nav>
-    </header>
-    <p class="p1">Lorem ipsum, dolor sit amet connisectetur adipisicing elit. Placeat officia quasi ab quia eos animi aliquid
-        eveniet
-        veritatis consequuntur tenetur. Omnis, beatae natus? Ipsum, enim quisquam similique consequatur quia facere?
-    </p>
-    <h2 class="exp">EXPERIENCE</h2>
-
-
-    <span class="sp"><strong>Dec 2006-</strong></span> <span class="bl"><strong> senior project manager</strong>
-    </span><br>
-    <span class="sp"><strong>present</strong></span><span class="wait">stlen hospital ME</span>
-    <div>
-        <div class="par">
-            <ul>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt cumqu</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt cumqu</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt cumqu</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt cumqu</li>
-            </ul>
+                        <span> EMAIL <a href="mailto:balaprem678@gmail.com"
+                                target="-blank">nithishraina5@gmail.com</a></span>/
+                    </div>
+                    <div class="twitter">
+                        <span> twiter <a href="https://twitter.com/NITHISH632000" target="-blank">twitter</a></span>
+                    </div>
+                </div>
+            </header>
         </div>
+        <p class="p1">Lorem ipsum, dolor sit amet connisectetur adipisicing elit. Placeat officia quasi ab quia eos
+            animi aliquid
+            eveniet
+            veritatis consequuntur tenetur. Omnis, beatae natus? Ipsum, enim quisquam similique consequatur quia
+            facere?veritatis consequuntur tenetur. Omnis, beatae natus
+        </p>
+        <div class="experience"><i class="icofont-bag-alt"></i>
+            <div class="nam">
+                <h2> EXPERIENCE</h2>
+            </div>
 
-        <span class="sp"><strong>SEP 2004-</strong></span> <span class="bl"><strong>junior project
-                manager</strong></span><br>
-        <span class="sp"><strong>DEC 2006 </strong></span><span class="wai">stlen hospital ME</span>
+            <div class="first">
+                <span class="sp"><strong>Dec 2006-</strong></span> <span class="bl"><strong> senior project
+                        manager</strong>
+                </span><br>
+                <span class="sp"><strong>present</strong></span><span class="wait">stlen hospital ME</span>
+                <div>
+                    <div class="paragraph">
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
+                                cumqu
+                            </li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
+                                cumqu
+                            </li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
+                                cumqu
+                            </li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
+                                cumqu
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="second">
+                    <span class="sp"><strong>SEP 2004-</strong></span> <span class="bl"><strong>junior project
+                            manager</strong></span><br>
+                    <span class="sp"><strong>DEC 2006 </strong></span><span class="wai">stlen hospital ME</span>
 
-        <div class="par">
-            <ul>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt cumqu</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt cumqu</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt cumqu</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt cumqu</li>
-            </ul>
+                    <div class="pargraph2">
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
+                                cumqu
+                            </li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
+                                cumqu
+                            </li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
+                                cumqu
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <h2 class="exp">EDUCATION</h2>
+        <section class="education">
+            <div class="nam">
+                <h2>EDUCATION</h2>
+            </div>
 
-    <span class="sp"><strong>Sep 1996</strong></span> <span class="bl"> <strong>Bachelor degree </strong></span>
-    <div class="par">
-        <ul>
-            <li>bachelor drgree of engineering ,m.i.e.t.engineerinng college,trichy</li>
-            <li>higher secondry in anna boys he sec school,v.k. pudur</li>
-            <li>sslc ,anna boys hr sec school,v.k.pudur</li>
-        </ul>
+            <span class="sp"><strong>Sep 1996-</strong></span> <span class="bl"> <strong>Bachelor degree </strong></span>
+            <span class="date">May 2001</span>
+            <div class="par">
+                <ul>
+                    <li>bachelor drgree of engineering ,m.i.e.t.engineerinng college,trichy</li>
+                    <li>higher secondry in anna boys he sec school,v.k. pudur</li>
+                    <li>sslc ,anna boys hr sec school,v.k.pudur</li>
+                </ul>
+            </div>
+        </section>
+        <section class="sk">
+            <div class="nam">
+                <h2>SKILLS</h2>
+            </div>
+            <div class="skill">
+                <span><strong>Business process management</strong>-histry of sucessful innovation leading to cast
+                    saving</span><br>
+                <span><strong>Vendor management</strong>-proven track record of managing vendor in project with budget of over $1000000</span><br>
+                <span><strong>Project scheduling</strong>-over 90% of project led were finished in due time</span>
+            </div>
+        </section>
+        <section class="software">
+            <div class="nam"><h2>SOFTWARE</h2></div>
+            <div class="soft">
+                <div id="hs">
+                    <p>Microsof project</p>
+                    <p>Microsoft windows server</p>
+                </div>
+            </div>
+        </section>
+        <section class="certifications">
+            <div class="nam"><h2>CERTIFICATIONS</h2></div>
+            <div class="skill">
+                <span><strong>May 2015</strong></span> <span>PMP-project management institute</span><br>
+                <span><strong>Apr 2014</strong></span> <span>PRINCE2 foundationn</span>
+            </div>
+        </section>
+        <a href="E:\fabevy\1-personal-portfolio\practice3\index1.html">conact us</a>
     </div>
-    <h2 class=exp>SKILLS</h2>
-    <div class="skill">
-        <span><strong>business process management</strong>-histry of sucessful innovation leading to cast
-            saving</span><br>
-        <span><strong>vendor management</strong>-proven track record of managing vendor in project with budget of over
-            $1000000</span><br>
-        <span><strong>project scheduling</strong>-over 90% of project led were finished in due time</span>
-    </div>
-    <h2 class="exp">SOFTWARE</h2>
-    <div class="skill">
-        <div id="hs">
-            <p>microsof project</p>
-            <p>microsoft windows server</p>
-        </div>
-    </div>
-    <h2 class="exp">CERTIFICATIONS</h2>
-    <div class="skill">
-        <span><strong>May 2015</strong></span> <span>PMP-project management institute</span><br>
-        <span><strong>Apr 2014</strong></span> <span>PRINCE2 foundationn</span>
-    </div>
+
 </body>
-<a href="E:\fabevy\1-personal-portfolio\practice3\index1.html">conact us</a>
 
 </html>
