--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/icofont.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
     <title>Document</title>
 </head>
 
@@ -28,7 +27,7 @@
                 </div>
                 <div class="navication">
                     <div class="ph">
-                        PHONE <a href="tel:91 9345335073" target="-blank">9345335073</a></span>
+                        PHONE <a href="tel:919345335073" target="-blank">9345335073</a>
                     </div>
                     <div class="linkedin">
                         linkedin <a href="linkedin.com" target="-blank">linkedin </a><br>
@@ -49,101 +48,205 @@
             eveniet
             veritatis consequuntur tenetur. Omnis, beatae natus? Ipsum, enim quisquam similique consequatur quia
             facere?veritatis consequuntur tenetur. Omnis, beatae natus
+            facere?veritatis consequuntur tenetur. Omnis, beatae natus
         </p>
-        <div class="experience"><i class="icofont-bag-alt"></i>
-            <div class="nam">
-                <h2> EXPERIENCE</h2>
-            </div>
 
-            <div class="first">
-                <span class="sp"><strong>Dec 2006-</strong></span> <span class="bl"><strong> senior project
-                        manager</strong>
-                </span><br>
-                <span class="sp"><strong>present</strong></span><span class="wait">stlen hospital ME</span>
-                <div>
-                    <div class="paragraph">
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
-                                cumqu
-                            </li>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
-                                cumqu
-                            </li>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
-                                cumqu
-                            </li>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
-                                cumqu
-                            </li>
-                        </ul>
+        <div class="experience">
+            <div>
+
+                <div class="blackbox">
+
+                    <span></span>
+                </div>
+                <div class="nam">
+                    <i class="icofont-bag-alt"></i>
+                    <h2> EXPERIENCE</h2>
+                </div>
+
+                <div class="first">
+
+                    <div class="date">
+                        <div class="blackbox1">
+                            <span></span>
+                        </div>
+                        <p class="sp"><strong>Dec 2006-</strong></p>
+                        <p class="sp"><strong>present</strong></p>
+                    </div>
+                    <div class="projects">
+                        <span class="bl"><strong> senior project
+                                manager</strong>
+                        </span><br>
+                        <span class="wait">stlen hospital ME</span>
+                        <div>
+                            <div class="paragraph">
+                                <ul>
+                                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus
+                                        incidunt
+                                        cumqu
+                                    </li>
+                                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus
+                                        incidunt
+                                        cumqu
+                                    </li>
+                                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus
+                                        incidunt
+                                        cumqu
+                                    </li>
+                                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus
+                                        incidunt
+                                        cumqu
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="second">
-                    <span class="sp"><strong>SEP 2004-</strong></span> <span class="bl"><strong>junior project
-                            manager</strong></span><br>
-                    <span class="sp"><strong>DEC 2006 </strong></span><span class="wai">stlen hospital ME</span>
+                    <div class="date1">
+                        <div class="blackbox1">
+                            <span></span>
+                        </div>
+                        <p class="sp"><strong>SEP 2004-</strong></p>
+                        <p class="sp"><strong>DEC 2006 </strong></p>
+                    </div>
+                    <div class=" project2">
+                        <span class="bl"><strong>junior project
+                                manager</strong></span><br>
+                        <span class="wai">stlen hospital ME</span>
 
-                    <div class="pargraph2">
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
-                                cumqu
-                            </li>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
-                                cumqu
-                            </li>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
-                                cumqu
+                        <div class="pargraph2">
+                            <ul>
+                                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
+                                    cumqu
+                                </li>
+                                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
+                                    cumqu
+                                </li>
+                                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatibus incidunt
+                                    cumqu
 
-                        </ul>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <section class="education">
-            <div class="nam">
-                <h2>EDUCATION</h2>
-            </div>
 
-            <span class="sp"><strong>Sep 1996-</strong></span> <span class="bl"> <strong>Bachelor degree </strong></span>
-            <span class="date">May 2001</span>
-            <div class="par">
-                <ul>
-                    <li>bachelor drgree of engineering ,m.i.e.t.engineerinng college,trichy</li>
-                    <li>higher secondry in anna boys he sec school,v.k. pudur</li>
-                    <li>sslc ,anna boys hr sec school,v.k.pudur</li>
-                </ul>
             </div>
-        </section>
-        <section class="sk">
-            <div class="nam">
-                <h2>SKILLS</h2>
-            </div>
-            <div class="skill">
-                <span><strong>Business process management</strong>-histry of sucessful innovation leading to cast
-                    saving</span><br>
-                <span><strong>Vendor management</strong>-proven track record of managing vendor in project with budget of over $1000000</span><br>
-                <span><strong>Project scheduling</strong>-over 90% of project led were finished in due time</span>
-            </div>
-        </section>
-        <section class="software">
-            <div class="nam"><h2>SOFTWARE</h2></div>
-            <div class="soft">
-                <div id="hs">
+            <section class="education">
+                <div class="blackbox">
+                    <span></span>
+                </div>
+
+                <div class="nam">
+                    <i class="icofont-hat"></i>
+                    <h2>EDUCATION</h2>
+                </div>
+                <div class="edu">
+                    <div class="date3">
+                        <div class="blackbox1">
+                            <span></span>
+                        </div>
+                        <p class="sp"><strong>Sep 1996-</strong></p>
+                        <p class="sp"><strong> May 2001 </strong></p>
+                    </div>
+
+                    <div class="project3">
+                        <span class="bl"> <strong>Bachelor of degree
+                            </strong></span>
+
+                        <div class="paragraph3">
+                            <ul>
+
+                                <li>bachelor drgree of engineering ,m.i.e.t.engineerinng college,trichy</li>
+                                <li>higher secondry in anna boys he sec school,v.k. pudur</li>
+                                <li>sslc ,anna boys hr sec school,v.k.pudur</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+            <section class="sk">
+                <div class="blackbox">
+                    <span></span>
+                </div>
+                <div class="black_line">
+                    <span></span>
+                </div>
+                <div class="nam">
+                    <h2>SKILLS</h2>
+                </div>
+                <div class="skill">
+                    <div class="blackbox1">
+                        <span></span>
+                    </div>
+                    <p><strong>Business process management</strong>-histry of sucessful innovation leading to cast
+                        saving</p>
+                    <div class="blackbox1">
+                        <span></span>
+                    </div>
+                    <p><strong>Vendor management</strong>-proven track record of managing vendor in project with
+                        budget
+                        of over $1000000</p>
+                    <div class="blackbox1">
+                        <span></span>
+                    </div>
+                    <p><strong>Project scheduling</strong>-over 90% of project led were finished in due time</p>
+                </div>
+            </section>
+            <section class="software">
+                <div class="blackbox">
+                    <span></span>
+                </div>
+                <div class="nam">
+                    <i class="icofont-imac"></i>
+                    <h2>SOFTWARE</h2>
+                </div>
+                <div class="soft">
+                    <div class="blackbox1">
+                        <span></span>
+                    </div>
                     <p>Microsof project</p>
+                    <div class="blackbox1">
+                        <span></span>
+                    </div>
                     <p>Microsoft windows server</p>
                 </div>
-            </div>
-        </section>
-        <section class="certifications">
-            <div class="nam"><h2>CERTIFICATIONS</h2></div>
-            <div class="skill">
-                <span><strong>May 2015</strong></span> <span>PMP-project management institute</span><br>
-                <span><strong>Apr 2014</strong></span> <span>PRINCE2 foundationn</span>
-            </div>
-        </section>
-        <a href="E:\fabevy\1-personal-portfolio\practice3\index1.html">conact us</a>
-    </div>
+            </section>
+            <section class="certifications">
+                <div class="blackbox">
+                    <span></span>
+                </div>
+                <div class="nam">
+                    <h2>CERTIFICATIONS</h2>
+                </div>
 
+                <div class="cer">
+
+                    <span class="vl">
+                        <div class="blackbox1">
+                            <span></span>
+                        </div>
+                        <div>
+                            <div class="blackbox1">
+                                <span></span>
+                            </div>
+                        </div>
+                        <span><strong>May 2015</strong></span>
+                        <div class="blackbox1">
+                            <span></span>
+                        </div>
+                        <span><strong>Apr 2014</strong></span>
+                    </span>
+                    <div>
+                        <p>PMP-project management institute</p>
+
+                        <p>PRINCE2 foundationn</p>
+                    </div>
+                </div>
+            </section>
+            <a href="index1.html">conact us</a>
+        </div>
+    </div>
 </body>
 
 </html>
